refactoring and split item pools out to their own config files